Fri Feb 28 11:55:15 2003  George Lebl <jirka@5z.com>

	* src/genius.c, src/gnome-genius.c: raise precision back to 256
	  bits as mpfr is blazing fast on that as well.

Fri Feb 28 11:11:56 2003  George Lebl <jirka@5z.com>

	* src/mpwrap.[ch], configure.in, src/Makefile.am:  If MPFR is present
	  use it for functions like sin, cos, atan, pow, log, exp.  This
	  increases speed of those operations by a LOT (simple test gave
	  about 10 times the speedup).  Still you can use genius without
	  mpfr, since it usually doesn't seem to be present in GMP packages
	  since packagers tend to not add --enable-mpfr (I don't know why
	  it's not the default).  In any case since mpfr is a static library
	  so far I think builds that I make on my system will work for people
	  with the standard GMP package from redhat.

	* src/gnome-genius.c, src/genius.c: add a note in case MPFR isn't
	  compiled in to the copyright string so that people know if they
	  are running without it.

Thu Feb 27 18:07:58 2003  George Lebl <jirka@5z.com>

	* src/mpwrap.c, src/lexer.l, src/parse.y, src/eval.[ch], src/calc.c:
	  Make UMINUS bind less then factorials and powers and have factorials
	  bind tighter then powers but then fixup the tree to make things
	  like -1^k still come out as (-1)^k (but -a^k is -(a^k)).  One
	  of those WYMIWYG things.

	* src/graphing.c: fixup labels a bit

	* src/calc.c: when printing a power be specific about how to parse
	  any UMINUS

Thu Feb 27 16:56:58 2003  George Lebl <jirka@5z.com>

	* src/graphing.[ch], src/eval.[ch]: Copy the token into functions
	  when we eval them to be able to identify them.  And label functions
	  on the graph by their token or their body if it is less then 64
	  characters long.  Also fix problems with too ofset plot window.
	  The default plotwindow is now a parameter called LinePlotWindow.

	* src/genius.c, src/gnome-genius.c: make default precision 128
	  since it will make things faster.  Currently <anything>^float