@@ -1,3 +1,12 @@
+Fri Feb 28 13:32:46 2003  George Lebl <jirka@5z.com>
+
+	* src/graphing.c: play with graph colors, make graph lines 1.5 thick,
+	  add a plot progress indicator
+
+	* src/mpwrap.c: fix conversions to int and rational from float
+
+	* doc/manual.txt: add a note about unitary minus
+
 Fri Feb 28 11:55:15 2003  George Lebl <jirka@5z.com>
 
 	* src/genius.c, src/gnome-genius.c: raise precision back to 256
